Update UI Color Theme to Deep Cosmos & Amber

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         line-height: 1.6;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        /* Premium Dark Void Gradient */
+        /* Premium Deep Cosmos Gradient */
         background: 
-          radial-gradient(circle at 50% 0%, rgba(34, 211, 238, 0.03), transparent 40%),
-          radial-gradient(circle at 0% 100%, rgba(16, 185, 129, 0.02), transparent 40%),
-          #09090b; /* Zinc 950 */
+          radial-gradient(circle at 50% 0%, rgba(124, 58, 237, 0.05), transparent 40%), /* Violet */
+          radial-gradient(circle at 0% 100%, rgba(245, 158, 11, 0.03), transparent 40%), /* Amber */
+          #020617; /* Slate 950 - Deep Space */
         background-attachment: fixed;
       }
       #root {
@@ -59,7 +59,7 @@
       }
       /* Custom selection color */
       ::selection {
-        background: rgba(34, 211, 238, 0.2); /* Cyan tint */
+        background: rgba(245, 158, 11, 0.2); /* Amber tint */
         color: #fff;
       }
       
